--- a/css/style.css
+++ b/css/style.css
@@ -421,8 +421,8 @@ body {
 
 /* footer */
 .footer-block {
+  width: 1600px;
   background-color: #2f303a;
-  width: 1200px;
   margin-left: auto;
   margin-right: auto;
   padding-left: 15px;
@@ -445,7 +445,7 @@ body {
 }
 
 .contacts-footer-block {
-  width: 231px;
+  min-width: 231px;
   display: inline-block;
   padding-top: 45px;
   padding-bottom: 28px;
@@ -525,21 +525,24 @@ body {
   font-weight: 400;
   font-size: 16px;
   line-height: 1.9;
-  padding: 0;
+  padding: 15px;
 }
 
 .main-footer-block {
   margin-bottom: 28px;
   display: flex;
   padding: 0;
+  margin-left: 215px;
+  margin-right: 216px;
 }
 /* page down */
 
 .contacts-down {
-  min-width: 310px;
+  width: 310px;
   display: inline-block;
-  margin-left: 460px;
+  text-align: center;
   margin-bottom: 24px;
+  margin-left: 645px;
   border-top: 1px solid rgba(255, 255, 255, 0.1);
   color: rgba(255, 255, 255, 0.4);
   font-weight: 400;
@@ -552,6 +555,7 @@ body {
   padding-top: 94px;
   padding-bottom: 94px;
 }
+
 .customers-box {
   width: 1170;
   /* background-color: lawngreen; */
