--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+html {
+  box-sizing: border-box;
+}
+
 *,
 *::before *::after {
   box-sizing: inherit;
@@ -20,29 +24,28 @@ h1,
 h2,
 h3,
 h4,
-h5 {
-  padding: 0;
-  margin: 0;
-}
+h5,
 p {
-  margin: 0;
   padding: 0;
+  margin: 0;
 }
 
 .list-style {
-  list-style-type: none;
   display: flex;
-  margin: 0;
   padding: 0;
+  list-style-type: none;
 }
-.content-center {
-  justify-content: center;
-  text-align: center;
-  align-items: center;
+
+.company-logo {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .primery-text-title {
   margin: 0;
+  margin-bottom: 50px;
+
   color: var(--secondary-text-color);
   font-style: normal;
   font-weight: 700;
@@ -50,12 +53,14 @@ p {
   line-height: 1.7;
   text-align: center;
   letter-spacing: 0.03em;
-  margin-bottom: 50px;
 }
 
 .specific-title {
+  margin-top: 0;
+  margin-bottom: 0;
   display: none;
 }
+
 body {
   font-family: "Roboto", sans-serif;
   letter-spacing: 0.03em;
@@ -78,10 +83,12 @@ body {
 .header-container {
   display: flex;
   align-items: center;
+  border-bottom: 1px solid rgba(117, 117, 117, 0.3);
 }
 
 .header-nav {
   display: flex;
+  align-items: center;
   /* border: 1px solid #ececec; */
   /* background-color: bisque; */
 }
@@ -94,6 +101,7 @@ body {
   padding-top: 25px;
   padding-bottom: 25px;
   margin-right: 85px;
+
   color: var(--secondary-text-color);
   font-family: "Raleway", sans-serif;
   font-weight: 700;
@@ -107,10 +115,11 @@ body {
 
 /* nav-inner */
 .nav-inner {
-  width: 294px;
+  display: flex;
+  /* width: 294px; */
   padding-top: 32px;
   padding-bottom: 32px;
-  margin-right: 305px;
+
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
@@ -118,13 +127,12 @@ body {
 }
 .nav-inner .header-link {
   color: var(--secondary-text-color);
+  /* display: block;
+  padding: 5px; */
 }
 
-.header-links {
-  margin-right: 50px;
-}
-.header-links:last-child {
-  margin-right: 0;
+.header-links + .header-links {
+  margin-left: 50px;
 }
 
 .nav-inner .header-link:hover,
@@ -135,9 +143,10 @@ body {
 /* conntacs */
 
 .contacts-header {
-  display: inline-block;
+  display: flex;
   padding-top: 32px;
   padding-bottom: 32px;
+  margin-left: auto;
 }
 
 .contact-link {
@@ -155,17 +164,27 @@ body {
 
 /* hero section */
 .first-section {
-  background-image: url(../images/background.jpg);
   width: 1600px;
   margin-left: auto;
   margin-right: auto;
+
+  background-image: url(../images/background.jpg);
+  background-size: cover;
+  background-position: center;
+  background-color: rgba(47, 48, 58, 0.8);
 }
+
 .hero-section {
   width: 646px;
   margin-left: auto;
   margin-right: auto;
 }
+
 .hero-title {
+  padding-top: 204px;
+  margin-bottom: 42px;
+  margin-top: 0;
+
   color: var(--third-text-color);
   font-weight: 900;
   font-size: 44px;
@@ -173,19 +192,18 @@ body {
   line-height: 1.4;
   letter-spacing: 0.06em;
   text-transform: uppercase;
-  padding-top: 204px;
-  margin-bottom: 42px;
-  margin-top: 0;
 }
+
 .hero-button {
   padding-left: 220px;
   padding-bottom: 200px;
 }
 
 .block {
+  width: 280px;
   margin-right: 30px;
-  width: 270px;
 }
+
 .block:last-child {
   margin-right: 0;
 }
@@ -196,10 +214,12 @@ body {
   background-color: #f5f4fa;
   border-radius: 4px;
 }
+
 .advantages-img:hover,
 .advantages-img:focus {
   background-color: var(--accent-text-color);
 }
+
 .advantages-title {
   color: var(--secondary-text-color);
   font-weight: 700;
@@ -221,21 +241,26 @@ body {
   margin: 0;
   padding: 0;
 }
+
 .work-box {
   margin-right: 30px;
-  width: 370px;
+  width: 380px;
 }
+
 .work-box:last-child {
   margin-right: 0;
-  width: 370px;
 }
 
 .works-title {
+  min-width: 370px;
+  padding: 27px 82px;
+
   background-color: var(--primery-text-color);
   color: var(--third-text-color);
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
+  text-align: center;
   text-transform: uppercase;
 }
 
@@ -244,12 +269,13 @@ body {
 .person-box {
   margin-right: 30px;
   text-align: center;
-  width: 270px;
+  width: 280px;
   background-color: #ffffff;
   box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 1px 3px rgba(0, 0, 0, 0.12);
   border-radius: 0px 0px 4px 4px;
 }
+
 .person-box:last-child {
   margin-right: 0px;
 }
@@ -258,14 +284,17 @@ body {
   padding: 12px;
   margin-right: 22px;
 }
+
 .team-title {
   margin-top: 30px;
   margin-bottom: 10px;
+
   color: var(--secondary-text-color);
   font-weight: 500;
   font-size: 16px;
   line-height: 1.2;
 }
+
 .icon-box {
   min-width: 206px;
   justify-content: center;
@@ -281,22 +310,21 @@ body {
   font-size: 16px;
   line-height: 1.2;
 }
+
 /* customers section */
-.company-box {
+.company-box:not(:last-child) {
   margin-right: 30px;
-}
-.company-box:last-child {
-  margin-right: 0;
 }
 
 .link-company {
-  display: inline-block;
+  display: block;
   padding-top: 24px;
   padding-bottom: 24px;
-  min-width: 170px;
+  width: 175px;
   border: 1px solid #afb1b8;
   border-radius: 4px;
 }
+
 .link-company:hover,
 .link-company:focus {
   border: 1px solid var(--accent-text-color);
@@ -306,25 +334,43 @@ body {
 .filters {
 }
 
-.link-filter {
+.button-filter {
+  padding: 6px 22px;
   color: black;
   background-color: #f5f4fa;
   border: 0px;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.6;
+  text-align: center;
+  border-radius: 4px;
 }
 
-.link-filter:hover,
-.link-filter:focus {
+.button-filter:hover,
+.button-filter:focus {
   color: var(--third-text-color);
   background-color: #2196f3;
 }
 
-/* portfolio */
-
-.portfolio-page {
+.button-list {
+  display: block;
 }
+
+.button-list:not(:last-child) {
+  margin-right: 8px;
+}
+
+/* portfolio */
+.filtr {
+  display: flex;
+  /* align-items: flex-start; */
+  justify-content: center;
+  margin-top: 93px;
+  margin-bottom: 34px;
+  background-color: deeppink;
+  padding-bottom: 16px;
+}
+
 .portfolio-title {
   color: var(--secondary-text-color);
   font-weight: 700;
@@ -332,11 +378,34 @@ body {
   line-height: 2;
   letter-spacing: 0.06em;
 }
+
 .filtr-title {
   color: var(--primery-text-color);
   font-weight: 400;
   font-size: 16px;
   line-height: 1.9;
+}
+
+.portfolio-pages {
+  background-color: yellow;
+  flex-wrap: wrap;
+  margin-top: 0;
+
+  /* flex-wrap: wrap; */
+  /* justify-content: space-around; */
+}
+.page {
+  margin-right: 30px;
+  background-color: salmon;
+  width: 380px;
+}
+
+.page:nth-child(3n) {
+  margin-right: 0;
+}
+
+.page-img {
+  width: 380px;
 }
 
 .portfolio-text {
@@ -364,8 +433,8 @@ body {
 /* footer contacts */
 .footer-logo .title {
   color: var(--accent-text-color);
-  margin: 0;
 }
+
 .contacts-footer-block {
   width: 231px;
   display: inline-block;
@@ -381,6 +450,7 @@ body {
   line-height: 1.7;
   font-style: normal;
 }
+
 .footer-contacts {
   color: rgba(255, 255, 255, 0.6);
   margin-top: 9px;
@@ -404,25 +474,28 @@ body {
   padding-top: 54px;
   margin-right: 94px;
 }
-.logo-box-footer {
-}
-.footer-links {
-  margin-right: 34px;
-}
-.footer-links:last-child {
-  margin-right: 0;
+
+.footer-links + .footer-links {
+  margin-left: 34px;
 }
 
 .form-page {
   min-width: 570px;
   padding-top: 54px;
 }
+
 /* subscription */
 .button {
+  display: inline-block;
+  padding: 10px 32px;
+  border-radius: 4px;
+  min-width: 200px;
+
   color: var(--third-text-color);
   background-color: var(--accent-text-color);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border: 1px solid transparent;
+
   font-family: inherit;
   font-weight: 700;
   font-size: 16px;
@@ -430,14 +503,11 @@ body {
   align-items: center;
   text-align: center;
   letter-spacing: 0.06em;
-  display: inline-block;
-  padding: 10px 32px;
-  border-radius: 4px;
-  min-width: 200px;
 }
 .logo-img {
   width: 13px;
 }
+
 .footer-block .subscription {
   min-width: 358px;
   height: 50px;
@@ -456,18 +526,12 @@ body {
 }
 /* page down */
 
-.footer-line {
-  border: 1px solid rgba(255, 255, 255, 0.1);
-  height: 0;
-  margin-bottom: 18px;
-  padding: 0;
-}
-
 .contacts-down {
   min-width: 310px;
   display: inline-block;
   margin-left: 460px;
   margin-bottom: 24px;
+  border-top: 1px solid rgba(255, 255, 255, 0.1);
   color: rgba(255, 255, 255, 0.4);
   font-weight: 400;
   font-size: 12px;
@@ -478,10 +542,9 @@ body {
   background-color: #f5f4fa;
   padding-top: 94px;
   padding-bottom: 94px;
-  margin: 0;
 }
 .customers-box {
-  min-width: 1170;
+  width: 1170;
   /* background-color: lawngreen; */
   padding-bottom: 94px;
   padding-top: 94px;
