--- a/css/style.css
+++ b/css/style.css
@@ -350,6 +350,7 @@ body {
 .button-filter:focus {
   color: var(--third-text-color);
   background-color: #2196f3;
+  cursor: pointer;
 }
 
 .button-list {
@@ -367,7 +368,7 @@ body {
   justify-content: center;
   margin-top: 93px;
   margin-bottom: 34px;
-  background-color: deeppink;
+  /* background-color: deeppink; */
   padding-bottom: 16px;
 }
 
@@ -387,21 +388,23 @@ body {
 }
 
 .portfolio-pages {
-  background-color: yellow;
+  /* background-color: yellow; */
   flex-wrap: wrap;
   margin-top: 0;
-
-  /* flex-wrap: wrap; */
-  /* justify-content: space-around; */
+  margin-bottom: 94px;
 }
 .page {
   margin-right: 30px;
-  background-color: salmon;
-  width: 380px;
+  margin-bottom: 30px;
+  /* background-color: salmon; */
+  width: calc((100% - 60px) / 3);
 }
 
 .page:nth-child(3n) {
   margin-right: 0;
+}
+.page:nth-last-child(-n + 3) {
+  margin-bottom: 0;
 }
 
 .page-img {
@@ -413,11 +416,17 @@ body {
   font-weight: 400;
   font-size: 18px;
   line-height: 1.55;
+  display: none;
 }
 
 /* footer */
 .footer-block {
   background-color: #2f303a;
+  width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 15px;
+  padding-right: 15px;
 }
 
 /*footer-logo */
@@ -509,7 +518,7 @@ body {
 }
 
 .footer-block .subscription {
-  min-width: 358px;
+  width: 358px;
   height: 50px;
   color: rgba(255, 255, 255, 0.6);
   border: 2px solid rgba(255, 255, 255, 0.3);
