--- a/css/style.css
+++ b/css/style.css
@@ -422,6 +422,7 @@ body {
 /* footer */
 .footer-block {
   width: 1600px;
+  height: 252px;
   background-color: #2f303a;
   margin-left: auto;
   margin-right: auto;
@@ -461,6 +462,7 @@ body {
 }
 
 .footer-contacts {
+  display: inline-block;
   color: rgba(255, 255, 255, 0.6);
   margin-top: 9px;
 }
