--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,8 @@ html {
 }
 
 *,
-*::before *::after {
+*::before,
+*::after {
   box-sizing: inherit;
   margin: 0;
   padding: 0;
@@ -73,17 +74,19 @@ body {
 
 .container {
   /* background-color: yellow; */
-  width: 1230px;
+  width: 1200px;
   margin-left: auto;
   margin-right: auto;
   padding-left: 15px;
   padding-right: 15px;
 }
+.header {
+  border: 1px solid rgba(117, 117, 117, 0.3);
+}
 
 .header-container {
   display: flex;
   align-items: center;
-  border-bottom: 1px solid rgba(117, 117, 117, 0.3);
 }
 
 .header-nav {
@@ -164,14 +167,18 @@ body {
 
 /* hero section */
 .first-section {
-  width: 1600px;
   margin-left: auto;
   margin-right: auto;
-
-  background-image: url(../images/background.jpg);
+  max-width: 1600px;
+  height: 600px;
+  background-color: black;
+  background-image: linear-gradient(
+      rgba(47, 48, 58, 0.8),
+      rgba(47, 48, 58, 0.8)
+    ),
+    url(../images/background.jpg);
   background-size: cover;
   background-position: center;
-  background-color: rgba(47, 48, 58, 0.8);
 }
 
 .hero-section {
@@ -200,7 +207,7 @@ body {
 }
 
 .block {
-  width: 280px;
+  width: 270px;
   margin-right: 30px;
 }
 
@@ -244,7 +251,7 @@ body {
 
 .work-box {
   margin-right: 30px;
-  width: 380px;
+  width: 370px;
 }
 
 .work-box:last-child {
@@ -269,7 +276,7 @@ body {
 .person-box {
   margin-right: 30px;
   text-align: center;
-  width: 280px;
+  width: 270px;
   background-color: #ffffff;
   box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 1px 3px rgba(0, 0, 0, 0.12);
@@ -320,7 +327,7 @@ body {
   display: block;
   padding-top: 24px;
   padding-bottom: 24px;
-  width: 175px;
+  width: 170px;
   border: 1px solid #afb1b8;
   border-radius: 4px;
 }
@@ -408,7 +415,7 @@ body {
 }
 
 .page-img {
-  width: 380px;
+  width: 370px;
 }
 
 .portfolio-text {
@@ -421,7 +428,6 @@ body {
 
 /* footer */
 .footer-block {
-  width: 1600px;
   height: 252px;
   background-color: #2f303a;
   margin-left: auto;
@@ -533,6 +539,7 @@ body {
 .main-footer-block {
   margin-bottom: 28px;
   display: flex;
+  justify-content: center;
   padding: 0;
   margin-left: 215px;
   margin-right: 216px;
@@ -540,11 +547,8 @@ body {
 /* page down */
 
 .contacts-down {
-  width: 310px;
-  display: inline-block;
   text-align: center;
-  margin-bottom: 24px;
-  margin-left: 645px;
+  margin-bottom: 0;
   border-top: 1px solid rgba(255, 255, 255, 0.1);
   color: rgba(255, 255, 255, 0.4);
   font-weight: 400;
@@ -559,7 +563,7 @@ body {
 }
 
 .customers-box {
-  width: 1170;
+  width: 1170px;
   /* background-color: lawngreen; */
   padding-bottom: 94px;
   padding-top: 94px;
