--- a/css/style.css
+++ b/css/style.css
@@ -78,6 +78,9 @@ body {
 /* Header */
 .header {
   border: 1px solid rgba(117, 117, 117, 0.3);
+  width: 1600px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .header-container {
@@ -157,7 +160,7 @@ body {
 .first-section {
   margin-left: auto;
   margin-right: auto;
-  max-width: 1600px;
+  width: 1600px;
   height: 600px;
   background-color: black;
   background-image: linear-gradient(
@@ -216,6 +219,7 @@ body {
 }
 
 .advantages-title {
+  margin-bottom: 10px;
   color: var(--secondary-text-color);
   font-weight: 700;
   font-size: 14px;
@@ -405,12 +409,15 @@ body {
 
 /* footer */
 .footer-block {
+  width: 1600px;
   height: 252px;
-  background-color: #2f303a;
+  margin-left: auto;
+  margin-right: auto;
   margin-left: auto;
   margin-right: auto;
   padding-left: 15px;
   padding-right: 15px;
+  background-color: #2f303a;
 }
 
 /*footer-logo */
