--- a/css/style.css
+++ b/css/style.css
@@ -263,6 +263,12 @@ body {
 }
 
 /* team section */
+.team-container {
+  width: 1600px;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: #f5f4fa;
+}
 .person-box {
   margin-right: 30px;
   text-align: center;
