--- a/css/style.css
+++ b/css/style.css
@@ -306,7 +306,7 @@ body {
   line-height: 1.2;
 }
 
-/* customers section */
+/* customers-section */
 .company-box:not(:last-child) {
   margin-right: 30px;
 }
